--- a/index.html
+++ b/index.html
@@ -15,10 +15,51 @@
 </head>
 <body >
   <header></header>
-  <nav>
-    
+  <nav class="navbar bg-primary navbar-expand-lg bg-light">
+      <section class="container-fluid">
+            <a class="navbar-brand" href="#">GERALDINE LUCERO
+							<img src="#" alt="" width="30" height="24"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <section class="container-fluid" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Presentacion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="2familia.html">Mi Familia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="3amigos.html">Mis Amigos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="4estudio.html">Estudios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="formcontacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </section>
+        </section>
   </nav>
-	<main></main>
+	<main>
+    <article>
+			<section class="container">
+				<section>
+					<h1>Geraldine</h1>
+					<seccion>
+						<h2>Aprendiendo a programar con HTML CSS JS</h2>
+						<p>
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          </p>
+          	<img src="img/galeria/geral.jpg" alt="geraldine" width="" height="256"/>
+					</seccion>
+				</section>
+			</section>
+		</article>
+
+  </main>
   <footer></footer>
 </body>
 </html>
