se agrego imagenes de logo-html-css-js

--- a/2familia.html
+++ b/2familia.html
@@ -44,7 +44,9 @@
             </section>
         </section>
   </nav>
-	<main></main>
+	<main>
+        
+    </main>
   <footer></footer>
 </body>
 </html>
